# athena-python

./: .gitignore  404.html  README.md  athena.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
code_reference/alg_setup/: index.html
code_reference/algorithms/: index.html
code_reference/data_processing/: index.html
code_reference/functions/: index.html
code_reference/genomes/: index.html
code_reference/grape/: index.html
code_reference/parallel/: index.html
code_reference/parameters/: index.html
docs/: index.md  methodology.md  tutorials.md
docs/code_reference/: alg_setup.md  algorithms.md  data_processing.md  functions.md  genomes.md  grape.md  parallel.md  parameters.md
docs/manual/: input_files.md  installation.md  output_files.md  parameters.md
example/: color_map.txt  contin.txt  contin_missing.txt  example_casecon.txt  example_contin.txt  example_geno.txt  example_outcome.txt  genn.bnf  genn_boolean.bnf  genos.txt  genos_missing.txt  gesr.bnf  included.config  rsquared.config
genn/: alg_setup.py  functions.py  genn_setup.py  parallel.py  utils.py
grape/: algorithms.py  grape.py
manual/input_files/: index.html
manual/installation/: index.html
manual/output_files/: index.html
manual/parameters/: index.html
methodology/: index.html
src/athenage/: athena.py
src/athenage/genn/: alg_setup.py  functions.py  parallel.py
src/athenage/grape/: algorithms.py  genomes.py  grape.py
src/athenage/utilities/: data_processing.py  parameters.py
tutorials/: index.html
utilities/: data_processing.py  parameters.py
